fix(menu): 🐛 fix invisible user menu

--- a/resources/skins.citizen.styles/components/Menu.less
+++ b/resources/skins.citizen.styles/components/Menu.less
@@ -99,6 +99,7 @@
 			&[ open ]::before {
 				position: fixed;
 				inset: 0;
+				z-index: 0; // Needed for menu to work in Safari
 				opacity: 1;
 				transition: var( --transition-menu );
 				transition-property: opacity;
